manifests/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/target: "2bbf5d90-ccf2-4f7b-b23e-0ddcc80a45b9.cfargotunnel.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  rules:
  - host: grafana.milenika.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # This is the correct service name for the prometheus-stack chart
            name: prometheus-stack-grafana
            port:
              number: 80
